src/objects/MPM4_BASE__Milestone1_Task__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Optics_Open_Tasks</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Task_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MPM4_BASE__Overall_Status__c</columns>
        <columns>MPM4_BASE__OwnerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MPM4_BASE__Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>MPM4_BASE__OwnerId__c</field>
            <operation>equals</operation>
            <value>DEBBIE NEVERVE</value>
        </filters>
        <label>Optics Open Tasks</label>
        <sharedTo>
            <group>GAAT_Queue</group>
        </sharedTo>
    </listViews>
</CustomObject>